objects/Time__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(End_Time__c - Start_Time__c) *24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Timesheet__r.Taskray_Task__r.TASKRAY__Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <formula>Timesheet__r.Taskray_Task__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <label>Timesheet</label>
        <referenceTo>Timesheet__c</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billed</fullName>
                    <default>true</default>
                    <label>Billed</label>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Reduced rate</fullName>
                </value>
                <value>
                    <fullName>Unbilled</fullName>
                </value>
                <value>
                    <fullName>Travel Rate</fullName>
                </value>
                <value>
                    <fullName>Applied Research Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time</label>
    <nameField>
        <displayFormat>Time-{0}</displayFormat>
        <label>Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>